<resources>
    <string name="app_name">ferme_intelligente</string>

    <string-array name="types_plantes">
        <item>Fleur</item>
        <item>Arbre</item>
        <item>Plante aromatique</item>
        <item>Légume</item>
        <item>Fruit</item>
    </string-array>

    <string-array name="images_plantes">
        <item>plante1</item>
        <item>plante2</item>
        <item>plante3</item>
        <item>plante4</item>

    </string-array>
    <string name="profile_image">Photo de profil</string>
    <string name="personal_information">Informations personnelles</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="location">Localisation</string>
    <string name="edit_profile">Modifier le profil</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="change_password">Changer le mot de passe</string>
    <string name="logout">Déconnexion</string>
</resources>